name:                AVLTree
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/GrantSeltzer/Dynamically-Balanced-BT-Haskell
license:             GPL-3
license-file:        LICENSE
author:              Grant Seltzer (Grantseltzer)
maintainer:          grantseltzer@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     AVL
  -- other-modules:       
  build-depends:       base>=4
